--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/home.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -40,9 +40,44 @@
         </div>
     </nav>
 
+    <!-- Hero Section with Video Background -->
+    <div class="hero-section">
+        <video autoplay muted loop id="hero-video">
+            <source src="videos/rizal-park.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="hero-content">
+            <h1>The Philippines a Century Hence</h1>
+            <p class="lead">A profound essay written by Jose Rizal in 1889-1890, published in La Solidaridad, where he analyzed the possible future of the Philippines in the next hundred years and the various factors that could influence its development or decay.</p>
+        </div>
+    </div>
+
     <div class="container main-content">
-        <h1>Welcome to Jose Rizal's Website</h1>
-        <!-- Add your home page content here -->
+        <!-- Introduction Section -->
+        <section class="introduction-section">
+            <h2>About the Essay</h2>
+            <p>In "The Philippines a Century Hence," Jose Rizal demonstrates his analytical prowess by examining the Philippines' colonial situation and projecting its possible futures. Written during a critical period of Philippine history, this essay showcases Rizal's deep understanding of social and political dynamics, as well as his hopes and concerns for his nation's future.</p>
+            <p>The essay explores various scenarios for the Philippines, from continued Spanish colonization to independence, while analyzing the social, political, and economic factors that would influence these outcomes. Rizal's insights remain relevant today, offering valuable perspectives on nationalism, governance, and social progress.</p>
+        </section>
+
+        <!-- Biography Section -->
+        <section class="biography-section">
+            <h2>Jose Rizal: A Brief Biography</h2>
+            <div class="row">
+                <div class="col-md-8">
+                    <p>Jose Rizal (1861-1896) was a Filipino nationalist, writer, and reformist whose works and ideas played a crucial role in the Philippines' movement for independence from Spanish colonization. Born in Calamba, Laguna, he showed remarkable intellectual capabilities from an early age.</p>
+                    <p>Educated in Manila and Europe, Rizal became a polymath, excelling as a physician, artist, writer, and scientist. His most famous works include the novels "Noli Me Tangere" and "El Filibusterismo," which exposed the injustices of Spanish colonial rule and inspired a growing nationalist movement.</p>
+                    <p>Beyond his literary works, Rizal was a passionate advocate for peaceful reform, education, and scientific progress. He believed that education and civic consciousness were key to achieving national dignity and progress. His ideas and writings continue to influence Philippine society and inspire people worldwide.</p>
+                    <p>Rizal's life came to a tragic end when he was executed by Spanish authorities in 1896, but his legacy lives on as the national hero of the Philippines and a symbol of Asian nationalism and intellectual achievement.</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="biography-image">
+                        <img src="images/Jose_Rizal-1.jpg" alt="Jose Rizal" class="img-fluid rounded">
+                        <p class="image-caption mt-2">Jose Rizal, National Hero of the Philippines</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <!-- Bootstrap JS Bundle with Popper -->
