updated Home and Work Pages

--- a/index.html
+++ b/index.html
@@ -56,26 +56,74 @@
         <!-- Introduction Section -->
         <section class="introduction-section">
             <h2>About the Essay</h2>
-            <p>In "The Philippines a Century Hence," Jose Rizal demonstrates his analytical prowess by examining the Philippines' colonial situation and projecting its possible futures. Written during a critical period of Philippine history, this essay showcases Rizal's deep understanding of social and political dynamics, as well as his hopes and concerns for his nation's future.</p>
-            <p>The essay explores various scenarios for the Philippines, from continued Spanish colonization to independence, while analyzing the social, political, and economic factors that would influence these outcomes. Rizal's insights remain relevant today, offering valuable perspectives on nationalism, governance, and social progress.</p>
+            <p><i>"The Philippines a Century Hence" ("Filipinas Dentro de Cien Años")</i> is a socio-political essay written by Dr. José Rizal, first published serially in the Barcelona-based periodical La Solidaridad from September 1889 to January 1890. </p>
+            
+            <p>In this seminal work, Rizal examines the historical causes of the Philippines' decline during Spanish colonization and forecasts the archipelago's future over the next century.</p>
+            
+            <p>He discusses the potential for reform under Spanish rule, the possibility of violent revolution, and the threat of foreign intervention.</p>
+
+            <p>Rizal emphasizes the importance of education, self-determination, and the recognition of Filipino rights as pivotal factors that would shape the nation's destiny.</p>
+
+            <div class="mt-4">
+                <img src="images/the-philippines-a-century-hence.jpg" alt="The Philippines a Century Hence" class="img-fluid rounded">
+                <p class="image-caption mt-2">Original publication of "The Philippines a Century Hence" in La Solidaridad</p>
+            </div>
         </section>
 
         <!-- Biography Section -->
         <section class="biography-section">
             <h2>Jose Rizal: A Brief Biography</h2>
-            <div class="row">
+            <!-- Early Life -->
+            <div class="row mb-4">
                 <div class="col-md-8">
-                    <p>Jose Rizal (1861-1896) was a Filipino nationalist, writer, and reformist whose works and ideas played a crucial role in the Philippines' movement for independence from Spanish colonization. Born in Calamba, Laguna, he showed remarkable intellectual capabilities from an early age.</p>
-                    <p>Educated in Manila and Europe, Rizal became a polymath, excelling as a physician, artist, writer, and scientist. His most famous works include the novels "Noli Me Tangere" and "El Filibusterismo," which exposed the injustices of Spanish colonial rule and inspired a growing nationalist movement.</p>
-                    <p>Beyond his literary works, Rizal was a passionate advocate for peaceful reform, education, and scientific progress. He believed that education and civic consciousness were key to achieving national dignity and progress. His ideas and writings continue to influence Philippine society and inspire people worldwide.</p>
-                    <p>Rizal's life came to a tragic end when he was executed by Spanish authorities in 1896, but his legacy lives on as the national hero of the Philippines and a symbol of Asian nationalism and intellectual achievement.</p>
+                    <p>José Protasio Rizal Mercado y Alonso Realonda (June 19, 1861 – December 30, 1896) was a Filipino nationalist, writer, and polymath during the tail end of the Spanish colonial period in the Philippines. Born in Calamba, Laguna, Rizal was the seventh of eleven children in a well-to-do family. He displayed exceptional intellectual abilities from a young age, mastering multiple languages and excelling in various fields of study.</p>
                 </div>
                 <div class="col-md-4">
                     <div class="biography-image">
-                        <img src="images/Jose_Rizal-1.jpg" alt="Jose Rizal" class="img-fluid rounded">
-                        <p class="image-caption mt-2">Jose Rizal, National Hero of the Philippines</p>
+                        <img src="images/home/young-rizal.jpg" alt="Young Rizal" class="img-fluid rounded shadow">
+                        <p class="image-caption mt-2">Young Rizal displaying his early intellectual prowess</p>
                     </div>
                 </div>
+            </div>
+
+            <!-- Education -->
+            <div class="row mb-4">
+                <div class="col-md-4">
+                    <div class="biography-image">
+                        <img src="images/home/Rizal-at-University-of-Santo-Tomas.jpg" alt="Rizal at University" class="img-fluid rounded shadow">
+                        <p class="image-caption mt-2">Rizal during his university years</p>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <p>Rizal pursued higher education in Manila, obtaining a Bachelor of Arts degree from the Ateneo Municipal de Manila. He later studied medicine at the University of Santo Tomas but completed his medical degree at the Universidad Central de Madrid in Spain, specializing in ophthalmology. His desire to cure his mother's eye ailment motivated this specialization.</p>
+                </div>
+            </div>
+
+            <!-- Literary Works -->
+            <div class="row mb-4">
+                <div class="col-md-8">
+                    <p>While in Europe, Rizal became actively involved in the Propaganda Movement, advocating for political reforms in the Philippines through peaceful means. He authored several significant works, including the novels <i>"Noli Me Tángere"</i> and <i>"El Filibusterismo"</i>, which exposed the injustices of Spanish colonial rule and inspired a sense of nationalism among Filipinos.</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="biography-image">
+                        <img src="images/home/Noli Me Tangere and El Filibusterismo .jpg" alt="Rizal's Novels" class="img-fluid rounded shadow">
+                        <p class="image-caption mt-2">Rizal's influential novels that sparked nationalism</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Final Years -->
+            <div class="row mb-4">
+                <div class="col-md-4">
+                    <div class="biography-image">
+                        <img src="images/home/Rizal-execution-scene.jpg" alt="Rizal's Execution" class="img-fluid rounded shadow">
+                        <p class="image-caption mt-2">The historic moment of Rizal's martyrdom</p>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <p>Rizal's reformist ideas and writings led to his arrest upon returning to the Philippines. He was exiled to Dapitan in Mindanao for four years. In 1896, amidst the outbreak of the Philippine Revolution, he was arrested, tried for sedition, and executed by firing squad on December 30, 1896, in Manila. His martyrdom awakens the Filipinos to pursue independence, and he is revered as a national hero of the Philippines.</p>
+                </div>
+            </div>
             </div>
         </section>
     </div>
