updated home css

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             Your browser does not support the video tag.
         </video>
         <div class="hero-content">
-            <h1>The Philippines a Century Hence</h1>
+            <img src="images/title.png" class="title">
             <p class="lead">A profound essay written by Jose Rizal in 1889-1890, published in La Solidaridad, where he analyzed the possible future of the Philippines in the next hundred years and the various factors that could influence its development or decay.</p>
         </div>
     </div>
