--- a/analysis.html
+++ b/analysis.html
@@ -11,6 +11,7 @@
     <!-- Custom CSS -->
     <link href="css/nav-bar.css" rel="stylesheet">
     <link href="css/analysis.css" rel="stylesheet">
+    <link href="css/footer.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -46,7 +47,7 @@
     <div class="container main-content">
         <div class="analysis-header">
             <h1>Analysis of "The Philippines a Century Hence"</h1>
-            <p>A critical examination of Jose Rizal's prophetic essay and its enduring relevance to contemporary Filipino society</p>
+            <p>A critical examination of Jose Rizal's predictive essay and its enduring relevance to contemporary Filipino society</p>
         </div>
 
         <!-- Contemporary Values Section -->
@@ -151,6 +152,16 @@
             </div>
         </section>
     </div>
+
+    <footer class="footer">
+        <div class="container text-center">
+            <img src="images/footer-logo.png" alt="Footer Logo" class="footer-logo">
+            <p class="footer-text">
+                All pictures, videos and texts are property of their respective owners. All pictures, videos and texts used in this website are for educational purposes only.
+            </p>
+            <a href="resources.html" class="footer-link">About Us</a>
+        </div>
+    </footer>
 
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
