--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link href="css/nav-bar.css" rel="stylesheet">
+    <link href="css/gallery.css" rel="stylesheet">
+    <link href="css/footer.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -43,8 +45,93 @@
 
     <div class="container main-content">
         <h1>Gallery</h1>
-        <!-- Add gallery page content here -->
+        
+        <h2 class="section-title">Historical Photos and Documents</h2>
+        <div class="carousel-container">
+            <div id="historyCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#historyCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#historyCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#historyCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-toggle="modal" data-bs-target="#imageModal" data-image="images/gallery/original-book-cover-the-philippines-a-century-hence.jpg" data-caption="Original Book Cover - The Philippines: A Century Hence">
+                        <img src="images/gallery/original-book-cover-the-philippines-a-century-hence.jpg" class="d-block" alt="Original Book Cover">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>Original Book Cover - The Philippines: A Century Hence</p>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item" data-bs-toggle="modal" data-bs-target="#imageModal" data-image="images/gallery/Jose_Rizal.jpg" data-caption="Portrait of Jose Rizal">
+                        <img src="images/gallery/Jose_Rizal.jpg" class="d-block" alt="Portrait of Jose Rizal">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>Portrait of Jose Rizal</p>
+                        </div>
+                    </div>
+                    
+                    <div class="carousel-item" data-bs-toggle="modal" data-bs-target="#imageModal" data-image="images/gallery/sketch-map-by-Dr-Rizal.gif" data-caption="Historical Sketch Map by Dr. Jose Rizal">
+                        <img src="images/gallery/sketch-map-by-Dr-Rizal.gif" class="d-block" alt="Sketch Map">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>Historical Sketch Map by Dr. Jose Rizal</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#historyCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#historyCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="" class="modal-image" alt="">
+                    </div>
+                    <div class="modal-footer">
+                        <p class="modal-caption"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h2 class="section-title">Video Documentation</h2>
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <h3 class="video-title">The Philippines a Century Hence (in under 10 minutes)</h3>
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/_ySiQYJyjRQ" title="The Philippines a Century Hence (in under 10 minutes)" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <h3 class="video-title">The Philippines a Century Hence Summary and Analysis</h3>
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/g-PuQZ8Ap1s" title="The Philippines a Century Hence Summary and Analysis" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <footer class="footer">
+        <div class="container text-center">
+            <img src="images/footer-logo.png" alt="Footer Logo" class="footer-logo">
+            <p class="footer-text">
+                All pictures, videos and texts are property of their respective owners. All pictures, videos and texts used in this website are for educational purposes only.
+            </p>
+            <a href="resources.html" class="footer-link">About Us</a>
+        </div>
+    </footer>
 
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
