--- a/resources.html
+++ b/resources.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link href="css/nav-bar.css" rel="stylesheet">
+    <link href="css/resources.css" rel="stylesheet">
+    <link href="css/footer.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -43,8 +45,71 @@
 
     <div class="container main-content">
         <h1>Resources</h1>
-        <!-- Add resources page content here -->
+        
+        <div class="content-container">
+            <!-- Primary Sources -->
+            <section class="resources-section">
+            <h2>Primary Sources</h2>
+            <p class="section-description">Full texts of the work, including original Spanish version, English translations, and complete manuscripts.</p>
+            <ul class="resource-list">
+                <li class="resource-item">
+                    <div class="resource-title">Original Spanish Version</div>
+                    <a href="https://www.gutenberg.org/files/14839/14839-h/14839-h.htm" target="_blank" class="resource-link">Project Gutenberg - Filipinas dentro de cien años</a>
+                </li>
+                <li class="resource-item">
+                    <div class="resource-title">English Translated Version</div>
+                    <a href="https://www.gutenberg.org/files/35899/35899-h/35899-h.htm" target="_blank" class="resource-link">Project Gutenberg - The Philippines a Century Hence</a>
+                </li>
+                <li class="resource-item">
+                    <div class="resource-title">Full Text Archive</div>
+                    <a href="https://archive.org/stream/philippinescentu00riza/philippinescentu00riza_djvu.txt" target="_blank" class="resource-link">Internet Archive - Complete Text</a>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Scholarly Articles -->
+        <section class="resources-section">
+            <h2>Scholarly Articles</h2>
+            <p class="section-description">Academic articles and research papers analyzing the work and its significance.</p>
+            <ul class="resource-list">
+                <li class="resource-item">
+                    <div class="resource-title">Rizal: Precursor of Futures Thinking in the Philippines</div>
+                    <a href="https://jfsdigital.org/jose-rizal-precursor-of-futures-thinking-in-the-philippines/" target="_blank" class="resource-link">Journal of Futures Studies</a>
+                </li>
+                <li class="resource-item">
+                    <div class="resource-title">Analysis by Julia Maree Benavides</div>
+                    <a href="https://www.researchgate.net/publication/357620641_The_Philippines_a_Century_Hence" target="_blank" class="resource-link">ResearchGate Publication</a>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Other Resources -->
+        <section class="resources-section">
+            <h2>Other Relevant Websites</h2>
+            <p class="section-description">Additional resources about Rizal, Philippine history, and literature.</p>
+            <ul class="resource-list">
+                <li class="resource-item">
+                    <div class="resource-title">Wikipedia Article</div>
+                    <a href="https://en.wikipedia.org/wiki/Filipinas_dentro_de_cien_a%C3%B1os" target="_blank" class="resource-link">Filipinas dentro de cien años</a>
+                </li>
+                <li class="resource-item">
+                    <div class="resource-title">Open Library Entry</div>
+                    <a href="https://openlibrary.org/books/OL23325313M/The_Philippines_a_century_hence" target="_blank" class="resource-link">The Philippines a Century Hence</a>
+                </li>
+            </ul>
+            </section>
+        </div>
     </div>
+
+    <footer class="footer">
+        <div class="container text-center">
+            <img src="images/footer-logo.png" alt="Footer Logo" class="footer-logo">
+            <p class="footer-text">
+                All pictures, videos and texts are property of their respective owners. All pictures, videos and texts used in this website are for educational purposes only.
+            </p>
+            <a href="resources.html" class="footer-link">About Us</a>
+        </div>
+    </footer>
 
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
