--- a/works.html
+++ b/works.html
@@ -10,6 +10,7 @@
     <!-- Custom CSS -->
     <link href="css/nav-bar.css" rel="stylesheet">
     <link href="css/work.css" rel="stylesheet">
+    <link href="css/footer.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -78,7 +79,7 @@
                 <div class="col-md-4">
                     <div class="historical-image">
                         <img src="images/works/spanish-colonial-oppression.jpg" alt="Spanish Colonial Period" class="img-fluid">
-                        <p class="image-caption">Spolarium by Juan Luna which portrays the Spanish colonial period in the Philippines</p>
+                        <p class="image-caption">Spolarium(1884) by Juan Luna which portrays the Spanish colonial period in the Philippines</p>
                     </div>
                 </div>
             </div>
@@ -177,6 +178,16 @@
             </div>
         </section>
     </div>
+
+    <footer class="footer">
+        <div class="container text-center">
+            <img src="images/footer-logo.png" alt="Footer Logo" class="footer-logo">
+            <p class="footer-text">
+                All pictures, videos and texts are property of their respective owners. All pictures, videos and texts used in this website are for educational purposes only.
+            </p>
+            <a href="resources.html" class="footer-link">About Us</a>
+        </div>
+    </footer>
 
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
