Added About Us Page and Updated Nav Bar at Home Page

--- a/resources.html
+++ b/resources.html
@@ -107,7 +107,7 @@
             <p class="footer-text">
                 All pictures, videos and texts are property of their respective owners. All pictures, videos and texts used in this website are for educational purposes only.
             </p>
-            <a href="resources.html" class="footer-link">About Us</a>
+            <a href="about.html" class="footer-link">About Us</a>
         </div>
     </footer>
 
